--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                         Data Analyst/Scientist
                     </p>
                     <p class="p1">Apply myself to be a statistical expert/consultant, keep improving
-                        programming, English and Japanese
-                        to enchance competitiveness. <br>
+                        programming, learning English and Japanese to enchance competitiveness. <br>
                         During the office time, work efficient and innovative. <br>
                         After work, enrich life by reading and exercising.
                     </p>
@@ -55,11 +54,17 @@
             <br>
             <!--collapse-->
             <div class="d-grid gap-2 d-md-flex justify-content-center">
-                <button class="btn btn-outline-info" type="button" data-toggle="collapse" data-target="#aboutme" aria-expanded="false" aria-controls="aboutme">
+                <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#aboutme" aria-expanded="false" aria-controls="aboutme">
                 About Me
                 </button>
                 <button class="btn btn-outline-success" type="button" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp">
                 Work Experience
+                </button>
+                <button class="btn btn-outline-danger" type="button" data-toggle="collapse" data-target="#photo" aria-expanded="false" aria-controls="photo">
+                Photo
+                </button>
+                <button class="btn btn-outline-info" type="button" data-toggle="collapse" data-target="#sbmap" aria-expanded="false" aria-controls="sbmap">
+                Snowboarding Map
                 </button>
             </div>
             <p>
@@ -100,11 +105,13 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">2013-2015</th>
-                                        <td>Institute of Industrial Engineering and Management</td>
+                                        <td>Master</td>
+                                        <td>Industrial Engineering and Management</td>
                                         <td>National Chiao Tung University</td>
                                     </tr>
                                         <th scope="row">2009-2013</th>
-                                        <td>Department of Statistics</td>
+                                        <td>Bachelor</td>
+                                        <td>Statistics</td>
                                         <td>National Taipei University</td>
                                 </tbody>
                             </table>
@@ -203,6 +210,43 @@
                                 <li>Parameter Control & Machine Log Analysis Automation - Get Internal Award</li>
                             </ol>
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </p>
+            <!--Life photo-->
+            <p>
+                <div class="collapse" id="photo">
+                    <div class="card card-body">
+                        <div class="d-grid gap-2 d-md-flex justify-content-center">
+                            <figure>
+                            <img src="picture/23172579_2095988460417729_3072952149122574510_n.jpg" class="rounded" alt="" width="300" height="300">
+                            <figcaption></figcaption>
+                            </figure>
+                            <figure>
+                            <img src="picture/82955819_3570585379624689_6427764951871389696_n.jpg" class="rounded" alt="" width="300" height="300">
+                            <figcaption></figcaption>
+                            </figure>
+                        </div>
+                        <div class="d-grid gap-2 d-md-flex justify-content-center">
+                            <img src="picture/308622_282480068435253_5355695_n.jpg" class="rounded" alt="" width="300" height="400">
+                            <img src="picture/48169794_2701317896551446_1929985838410629120_n.jpg" class="rounded" alt="" width="300" height="300">
+                        </div>
+                    </div>
+                </div>
+            </p>
+            <!--Snowboarding map-->
+            <p>
+                <div class="collapse" id="sbmap">
+                    <div class="card card-body">
+                        <div class="text-center">
+                            <p>
+                            <scan class="font-weight-bold" style="color:green">Green Point</scan> = Have been<br>
+                            <scan class="font-weight-bold" style="color:red">Red Point</scan> = Want to go
+                            </p>
+                        </div>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://www.google.com/maps/d/u/0/embed?mid=1uaeupuDR1Wt2ZijR6z8ATUWNv5xcyBg&ehbc=2E312F" width="640" height="480"></iframe>
                         </div>
                     </div>
                 </div>
