--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
                 <div class="collapse" id="photo">
                     <div class="card card-body">
                         <div class="d-grid gap-2 d-md-flex justify-content-center">
+                            <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp"></button>
                             <figure>
                             <img src="picture/23172579_2095988460417729_3072952149122574510_n.jpg" class="rounded" alt="" width="300" height="300">
                             <figcaption></figcaption>
@@ -240,6 +241,7 @@
                 <div class="collapse" id="sbmap">
                     <div class="card card-body">
                         <div class="text-center">
+                            <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp"></button>
                             <p>
                             <scan class="font-weight-bold" style="color:green">Green Point</scan> = Have been<br>
                             <scan class="font-weight-bold" style="color:red">Red Point</scan> = Want to go
@@ -252,7 +254,7 @@
                 </div>
             </p>
             <footer class="pt-3 mt-4 text-muted border-top">
-                &copy; 2022
+                &copy; 2023
             </footer>
         </div>
     </main>
