--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
             <p>
                 <div class="collapse" id="photo">
                     <div class="card card-body">
+                        <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#photo" aria-expanded="false" aria-controls="photo"></button>
                         <div class="d-grid gap-2 d-md-flex justify-content-center">
-                            <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp"></button>
                             <figure>
                             <img src="picture/23172579_2095988460417729_3072952149122574510_n.jpg" class="rounded" alt="" width="300" height="300">
                             <figcaption></figcaption>
@@ -240,8 +240,8 @@
             <p>
                 <div class="collapse" id="sbmap">
                     <div class="card card-body">
+                        <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#sbmap" aria-expanded="false" aria-controls="sbmap"></button>
                         <div class="text-center">
-                            <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp"></button>
                             <p>
                             <scan class="font-weight-bold" style="color:green">Green Point</scan> = Have been<br>
                             <scan class="font-weight-bold" style="color:red">Red Point</scan> = Want to go
