--- a/index.html
+++ b/index.html
@@ -218,10 +218,12 @@
             <p>
                 <div class="collapse" id="photo">
                     <div class="card card-body">
-                        <div class="d-grid gap-2 d-md-flex justify-content-center">
-                            <div class="position-absolute top-10 end-10">
+                        <div class="position-relative">
+                            <div class="position-absolute top-0 end-0">
                                 <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#photo" aria-expanded="false" aria-controls="photo"></button>
                             </div>
+                        </div>
+                        <div class="d-grid gap-2 d-md-flex justify-content-center">
                             <figure>
                             <img src="picture/23172579_2095988460417729_3072952149122574510_n.jpg" class="rounded" alt="" width="300" height="300">
                             <figcaption></figcaption>
@@ -243,8 +245,10 @@
                 <div class="collapse" id="sbmap">
                     <div class="card card-body">
                         <div class="text-center">
-                            <div class="position-absolute top-0 end-0">
-                                <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#sbmap" aria-expanded="false" aria-controls="sbmap"></button>
+                            <div class="position-relative">
+                                <div class="position-absolute top-0 end-0">
+                                    <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#sbmap" aria-expanded="false" aria-controls="sbmap"></button>
+                                </div>
                             </div>
                             <p>
                             <scan class="font-weight-bold" style="color:green">Green Point</scan> = Have been<br>
