--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta charset="utf-8">
     <title>About JianCheng</title>
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $('#aboutme').on('shown.bs.collapse', function (e) {
+                $('html,body').animate({
+                    scrollTop: $('#aboutme').offset().top -80
+                }, 500); 
+            }); 
+        });
+        </script>    
     <!--title-->
     <main>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class="container py-3">
             <div class="p-5 mb-1 text-bg-dark rounded-1">
                 <div class="container-fluid py-5">
@@ -54,16 +62,16 @@
             <br>
             <!--collapse-->
             <div class="d-grid gap-2 d-md-flex justify-content-center">
-                <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#aboutme" aria-expanded="false" aria-controls="aboutme">
+                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#aboutme" aria-expanded="false" aria-controls="aboutme" >
                 About Me
                 </button>
-                <button class="btn btn-outline-success" type="button" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp">
+                <button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#workexp" aria-expanded="false" aria-controls="workexp" >
                 Work Experience
                 </button>
-                <button class="btn btn-outline-danger" type="button" data-toggle="collapse" data-target="#photo" aria-expanded="false" aria-controls="photo">
+                <button class="btn btn-outline-danger" type="button" data-bs-toggle="collapse" data-bs-target="#photo" aria-expanded="false" aria-controls="photo" >
                 Photo
                 </button>
-                <button class="btn btn-outline-info" type="button" data-toggle="collapse" data-target="#sbmap" aria-expanded="false" aria-controls="sbmap">
+                <button class="btn btn-outline-info" type="button" data-bs-toggle="collapse" data-bs-target="#sbmap" aria-expanded="false" aria-controls="sbmap" >
                 Snowboarding Map
                 </button>
             </div>
@@ -266,6 +274,28 @@
             </footer>
         </div>
     </main>
-</body>
+    <!--JS-->
+    <script>
+    // Get the button:
+    let mybutton = document.getElementById("myBtn");
 
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+    } else {
+        mybutton.style.display = "none";
+    }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+    document.body.scrollTop = 0; // For Safari
+    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+    }
+
+    </script>
+</body>
 </html>
