--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="card card-body">
                         <div class="position-relative">
                             <div class="position-absolute top-0 end-0">
-                                <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#aboutme" aria-expanded="false" aria-controls="aboutme"></button>
+                                <button type="button" class="btn-close" aria-label="Close" data-bs-toggle="collapse" data-bs-target="#aboutme" aria-expanded="false" aria-controls="aboutme"></button>
                             </div>
                                 <h3 class="all_h">張健誠
                                     <small class="text-muted">Jian-Cheng Chang, David Chang</small>
@@ -133,7 +133,7 @@
                     <div class="card card-body">
                         <div class="position-relative">
                             <div class="position-absolute top-0 end-0">
-                                <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp"></button>
+                                <button type="button" class="btn-close" aria-label="Close" data-bs-toggle="collapse" data-bs-target="#workexp" aria-expanded="false" aria-controls="workexp"></button>
                             </div>
                             <!--Sea limited-->
                             <h3 class="all_h">
@@ -228,7 +228,7 @@
                     <div class="card card-body">
                         <div class="position-relative">
                             <div class="position-absolute top-0 end-0">
-                                <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#photo" aria-expanded="false" aria-controls="photo"></button>
+                                <button type="button" class="btn-close" aria-label="Close" data-bs-toggle="collapse" data-bs-target="#photo" aria-expanded="false" aria-controls="photo"></button>
                             </div>
                         </div>
                         <div class="d-grid gap-2 d-md-flex justify-content-center">
@@ -251,20 +251,21 @@
             <!--Snowboarding map-->
             <p>
                 <div class="collapse" id="sbmap">
-                    <div class="card card-body">
-                        <div class="text-center">
-                            <div class="position-relative">
-                                <div class="position-absolute top-0 end-0">
-                                    <button type="button" class="btn-close" aria-label="Close" data-toggle="collapse" data-target="#sbmap" aria-expanded="false" aria-controls="sbmap"></button>
-                                </div>
+                    <div class="card card-body">   
+                        <div class="position-relative">
+                            <div class="position-absolute top-0 end-0">
+                                <button type="button" class="btn-close" aria-label="Close" data-bs-toggle="collapse" data-bs-target="#sbmap" aria-expanded="false" aria-controls="sbmap"></button>
                             </div>
+                        </div>
+                        <div class="text-center">
                             <p>
                             <scan class="font-weight-bold" style="color:green">Green Point</scan> = Have been<br>
                             <scan class="font-weight-bold" style="color:red">Red Point</scan> = Want to go
                             </p>
+                            <iframe class="embed-responsive-item" src="https://www.google.com/maps/d/u/0/embed?mid=1uaeupuDR1Wt2ZijR6z8ATUWNv5xcyBg&ehbc=2E312F" width="800" height="600"></iframe>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.google.com/maps/d/u/0/embed?mid=1uaeupuDR1Wt2ZijR6z8ATUWNv5xcyBg&ehbc=2E312F" width="640" height="480"></iframe>
+                            
                         </div>
                     </div>
                 </div>
